[package]
name = "ethereum-vanity-address"
version = "0.1.0"
edition = "2021"
authors = ["K Gunjan <https://github.com/k-gunjan>"]
description = "etherem address genertor with custom pattern in it"


[dependencies]
crossterm = "0.26.1"
ethers = { version = "2", features = ["ws", "rustls"]}
hex = "0.4.3"
secp256k1 = { version = "0.27.0", features = ["rand"] }
tiny-keccak = { version = "1.4" }
web3 = "0.18.0"

